--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -10,8 +10,14 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4
             
+            - uses: pnpm/action-setup@v2.4.0
+              name: Install pnpm
+              with:
+                version: 8
+                run_install: false
+            
             - name: Install dependencies
-              run: npm install
+              run: pnpm install
             
             - name: Build
-              run: npm run build
+              run: pnpm run build
