--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -90,3 +90,5 @@ jobs:
                 NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
                 NETLIFY_DEPLOY_TO_PROD: true
                 build_directory: dist
+                build_command: pnpm run build
+                install_command: pnpm
