--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -89,6 +89,6 @@ jobs:
                 NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
                 NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
                 NETLIFY_DEPLOY_TO_PROD: true
-                build_directory: dist
+                build_directory: build
                 build_command: pnpm run build
                 install_command: pnpm install
