--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -45,6 +45,31 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+            
+            - uses: pnpm/action-setup@v2.4.0
+              name: Install pnpm
+              with:
+                version: 8
+                run_install: false
+
+            - name: Get pnpm store directory
+              shell: bash
+              run: |
+                echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+            - uses: actions/cache@v3
+              name: Setup pnpm cache
+              with:
+                path: ${{ env.STORE_PATH }}
+                key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+                restore-keys: |
+                    ${{ runner.os }}-pnpm-store-
+            
+            - name: Install dependencies
+              run: pnpm install
+            
+            - name: Build
+              run: pnpm run build
 
             - name: Run the server
               run: |
@@ -74,8 +99,33 @@ jobs:
     
     deploy:
         runs-on: ubuntu-latest
-        needs: run
+        needs: snapshot
         steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+            
+            - uses: pnpm/action-setup@v2.4.0
+              name: Install pnpm
+              with:
+                version: 8
+                run_install: false
+
+            - name: Get pnpm store directory
+              shell: bash
+              run: |
+                echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+            - uses: actions/cache@v3
+              name: Setup pnpm cache
+              with:
+                path: ${{ env.STORE_PATH }}
+                key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+                restore-keys: |
+                    ${{ runner.os }}-pnpm-store-
+            
+            - name: Install dependencies
+              run: pnpm install
+
             - name: Install Vercel CLI
               run: npm install --global vercel@latest
 
